# genKlayoutStack

./: .clangd  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  default.lyp  project_specification_template.md
.cache/clangd/index/: Defaulter.cpp.571B907BDBA54BFD.idx  Defaulter.hpp.C8BA407A7E3E020A.idx  LayerStack.cpp.A995FB8F421CD287.idx  LayerStack.hpp.85C4BF18119EC253.idx  LypReader.cpp.6714EF5C8B4179C0.idx  LypReader.hpp.C4D5057DFDD10AD5.idx  LypWriter.cpp.1DFAAAB583987E1C.idx  LypWriter.hpp.58C9BECA34701AB3.idx  ScriptReader.cpp.6B0550EC54247029.idx  ScriptReader.hpp.FE1EC40934030DE6.idx  ScriptWriter.cpp.60CD183E35ADAFEE.idx  ScriptWriter.hpp.61E8AAA19642E2D8.idx  TomlReader.cpp.090F553E8CD7C34F.idx  TomlReader.hpp.5E68C5FE3D3FACC7.idx  TomlWriter.cpp.C3CDF8E4DFBAEC4C.idx  TomlWriter.hpp.8B15CDA5D10FE97B.idx  Validator.cpp.A630C25743CFFCFC.idx  Validator.hpp.0CBA7F32061E332B.idx  buildStack.cpp.ECD79CE4F7A75898.idx  cmd_generate.cpp.072494053FFADFDC.idx  cmd_import.cpp.1DB01E89E66B3567.idx  cmd_validate.cpp.9259FDFF1DF9E0B3.idx  main.cpp.6ACBD2AE11F265A1.idx  test_bootstrap_import.cpp.1821744761221BC6.idx  test_buildStack.cpp.561BC0ECCE0C69BC.idx  test_defaulter.cpp.A657DED56DBD92C0.idx  test_lypReader.cpp.9FAA50E8037157DC.idx  test_negative_z.cpp.82DE8ADE0703DC41.idx  test_parallel_groups.cpp.9D7BC9F2C160840F.idx  test_roundtrip_toml_lyp.cpp.F62C5CA91F9149F3.idx  test_roundtrip_toml_script.cpp.5ACA93661BC779C8.idx  test_scriptReader.cpp.FACBBE763964BCC8.idx  test_scriptWriter.cpp.4A96B2808048E26E.idx  test_smoke.cpp.1DB4F8B188B2D4DA.idx  test_tomlReader.cpp.5D650D17E2668E23.idx  test_validator.cpp.7B33522F7B13FA01.idx
docs/: claude_code_guide_v0_4_2.md  genKlayoutStack_project_spec_v0_4_1.md  genKlayoutStack_spec_delta_v0_4_2.md  gks_z_stack_cheatsheet.md  gks_z_stack_cheatsheet_v0_4_2.md
docs/old/: genKlayoutStack_project_spec.v0.1.0.md  genKlayoutStack_project_spec_v0_2_0.md  genKlayoutStack_project_spec_v0_3_0.md  genKlayoutStack_project_spec_v0_4_0.md
fixtures/: asap7_25d.rb  asap7_stack.toml
include/gks/: version.hpp.in
include/gks/core/: Defaulter.hpp  LayerStack.hpp  Validator.hpp
include/gks/io/: LypReader.hpp  LypWriter.hpp  ScriptReader.hpp  ScriptWriter.hpp  TomlReader.hpp  TomlWriter.hpp
src/cli/: cmd_generate.cpp  cmd_import.cpp  cmd_validate.cpp  main.cpp
src/core/: Defaulter.cpp  LayerStack.cpp  Validator.cpp  buildStack.cpp
src/io/: LypReader.cpp  LypWriter.cpp  ScriptReader.cpp  ScriptWriter.cpp  TomlReader.cpp  TomlWriter.cpp
tests/integration/: test_bootstrap_import.cpp  test_negative_z.cpp  test_parallel_groups.cpp  test_roundtrip_toml_lyp.cpp  test_roundtrip_toml_script.cpp
tests/unit/: test_buildStack.cpp  test_defaulter.cpp  test_lypReader.cpp  test_scriptReader.cpp  test_scriptWriter.cpp  test_smoke.cpp  test_tomlReader.cpp  test_validator.cpp
